force-app/main/default/objects/Application__c/fields/Acceptance_Methods__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Methods__c</fullName>
    <description>How payments are accepted (e.g., E-com, Card-Present, Keyed).</description>
    <inlineHelpText>Comma-separate if multiple.</inlineHelpText>
    <label>Acceptance Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>