force-app/main/default/objects/Application__c/fields/Actual_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Volume__c</fullName>
    <label>Actual Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>