force-app/main/default/objects/Application__c/fields/Application_Industry__c.field-meta.xml
<CustomField>
    <fullName>Application_Industry__c</fullName>
    <description>Merchant industry selection (GVS).</description>
    <inlineHelpText>Choose the closest matching industry.</inlineHelpText>
    <label>Application Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Industry_GVS</valueSetName>
    </valueSet>
</CustomField>