force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Application lifecycle status - bound to Application_Status_GVS</description>
    <inlineHelpText>Current status in the application processing lifecycle</inlineHelpText>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Status_GVS</valueSetName>
    </valueSet>
</CustomField>