force-app/main/default/objects/Application__c/fields/Application_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Reason__c</fullName>
    <label>Application Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Elsewhere</fullName>
            </value>
            <value>
                <fullName>Bad Credit / Financials</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>CB Issues</fullName>
            </value>
            <value>
                <fullName>Citizenship / Incorporation Issue</fullName>
            </value>
            <value>
                <fullName>Customer Complaints</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>MATCH / TMF List</fullName>
            </value>
            <value>
                <fullName>Not Ready to Proceed Now</fullName>
            </value>
            <value>
                <fullName>Processing History Required</fullName>
            </value>
            <value>
                <fullName>Prohibited Product</fullName>
            </value>
            <value>
                <fullName>Suspected Fraudulent</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Unwilling to make Website Changes</fullName>
            </value>
            <value>
                <fullName>Waste of Time</fullName>
            </value>
            <value>
                <fullName>Weak Lead</fullName>
            </value>
            <value>
                <fullName>Payment Cloud</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Having Trouble Placing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>