force-app/main/default/objects/Application__c/fields/ARU_Fee1__c.field-meta.xml
<CustomField>
    <fullName>ARU_Fee1__c</fullName>
    <label>ARU Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>