force-app/main/default/objects/Application__c/fields/Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket__c</fullName>
    <description>Average single transaction amount.</description>
    <inlineHelpText>Example: typical sale amount before tax and fees.</inlineHelpText>
    <label>Average Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>