force-app/main/default/objects/Application__c/fields/Average_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction__c</fullName>
    <label>Average Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>