force-app/main/default/objects/Application__c/fields/Avg_Yearly_Visa_MC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Yearly_Visa_MC_Volume__c</fullName>
    <label>Avg Yearly Visa/MC Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>