force-app/main/default/objects/Application__c/fields/AVS_Voice_Authorization_Fee1__c.field-meta.xml
<CustomField>
    <fullName>AVS_Voice_Authorization_Fee1__c</fullName>
    <label>AVS Voice Authorization Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>