force-app/main/default/objects/Application__c/fields/Business_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Legal_Name__c</fullName>
    <description>Registered legal name of the business. Protected for PDF mapping.</description>
    <inlineHelpText>Must match incorporation documents exactly.</inlineHelpText>
    <label>Business Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>