force-app/main/default/objects/Application__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <description>Business model type</description>
    <inlineHelpText>Select your business model (e.g., B2B, B2C, Marketplace).</inlineHelpText>
    <label>Business Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
                <isActive>false</isActive>
                <label>E-commerce</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>