force-app/main/default/objects/Application__c/fields/Chargeback_Rate__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Rate__c</fullName>
    <description>Historical chargeback rate as a percentage.</description>
    <inlineHelpText>Enter percent value, e.g., 0.75 for 0.75%.</inlineHelpText>
    <label>Chargeback Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>