force-app/main/default/objects/Application__c/fields/Chargeback_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Ratio__c</fullName>
    <label>Chargeback Ratio (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>