force-app/main/default/objects/Application__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>