force-app/main/default/objects/Application__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <inlineHelpText>Primary email contact associated with the business.</inlineHelpText>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>