force-app/main/default/objects/Application__c/fields/Current_Processor__c.field-meta.xml
<CustomField>
    <fullName>Current_Processor__c</fullName>
    <label>Current Processor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>