force-app/main/default/objects/Application__c/fields/Customer_Market_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Market_Region__c</fullName>
    <description>Geographic market/region used for routing and analytics.</description>
    <inlineHelpText>Example: “US-East”, “EU-West”, “LATAM”.</inlineHelpText>
    <label>Customer Market Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>