force-app/main/default/objects/Application__c/fields/Days_to_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Decision__c</fullName>
    <formula>Response_Date__c - Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Decision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>