force-app/main/default/objects/Application__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Doing Business As (trade) name. Protected for PDF mapping.</description>
    <inlineHelpText>If none, leave blank.</inlineHelpText>
    <label>DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>