force-app/main/default/objects/Application__c/fields/Desired_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Volume__c</fullName>
    <label>Desired Monthly Volume</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>