force-app/main/default/objects/Application__c/fields/Email_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Sequence_Status__c</fullName>
    <description>CAN-SPAM compliance status for email sequences</description>
    <label>Email Sequence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Sequence_Status_GVS</valueSetName>
    </valueSet>
</CustomField>