force-app/main/default/objects/Application__c/fields/External_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Submission_ID__c</fullName>
    <description>ISO&apos;s reference number</description>
    <label>External Submission ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>