force-app/main/default/objects/Application__c/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <inlineHelpText>Federal Employer Identification Number (EIN) as assigned by the IRS. (can be found on your SS4 Form) Business Registration # for Non-US Corps.</inlineHelpText>
    <label>Federal Tax ID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>