force-app/main/default/objects/Application__c/fields/Flow_DoNotUpdate__c.field-meta.xml
<CustomField>
    <fullName>Flow_DoNotUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow-DoNotUpdate</label>
    <type>Checkbox</type>
</CustomField>