force-app/main/default/objects/Application__c/fields/Fulfillment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method__c</fullName>
    <description>Shipment/fulfillment method used by the merchant.</description>
    <inlineHelpText>Select the primary fulfillment method.</inlineHelpText>
    <label>Fulfillment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fulfillment_Method_GVS</valueSetName>
    </valueSet>
</CustomField>