force-app/main/default/objects/Application__c/fields/Game_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Type__c</fullName>
    <description>If applicable, specify the gaming product/category.</description>
    <inlineHelpText>Example: Sweepstakes, Raffles, Fantasy Sports.</inlineHelpText>
    <label>Game Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>