force-app/main/default/objects/Application__c/fields/Gateway_Platform__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Platform__c</fullName>
    <label>Gateway Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>