force-app/main/default/objects/Application__c/fields/Has_Processing_History__c.field-meta.xml
<CustomField>
    <fullName>Has_Processing_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates 3+ months of prior processing history.</description>
    <inlineHelpText>Check if the merchant has prior processing statements.</inlineHelpText>
    <label>Has Processing History</label>
    <type>Checkbox</type>
</CustomField>