force-app/main/default/objects/Application__c/fields/Highest_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Highest_Ticket__c</fullName>
    <description>Highest expected single transaction amount.</description>
    <inlineHelpText>Use the highest amount you will charge in one sale.</inlineHelpText>
    <label>Highest Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>