force-app/main/default/objects/Application__c/fields/Highest_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Highest_Transaction_Amount__c</fullName>
    <label>Highest Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>