force-app/main/default/objects/Application__c/fields/Incorporation_Country__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Country__c</fullName>
    <description>Country where the business is incorporated.</description>
    <inlineHelpText>Use full country name (e.g., United States, Canada).</inlineHelpText>
    <label>Incorporation Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>