force-app/main/default/objects/Application__c/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <label>ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>