force-app/main/default/objects/Application__c/fields/ISO_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>ISO_Approval_Amount__c</fullName>
    <description>Approved processing volume</description>
    <label>ISO Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>