force-app/main/default/objects/Application__c/fields/ISO_Contact__c.field-meta.xml
<CustomField>
    <fullName>ISO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ISO rep handling submission</description>
    <label>ISO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ISOContact</relationshipName>
    <type>Lookup</type>
</CustomField>