force-app/main/default/objects/Application__c/fields/ISO_Partner__c.field-meta.xml
<CustomField>
    <fullName>ISO_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which ISO received submission</description>
    <label>ISO Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ISOPartner</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>