force-app/main/default/objects/Application__c/fields/ISO_Pricing_Details__c.field-meta.xml
<CustomField>
    <fullName>ISO_Pricing_Details__c</fullName>
    <description>Rates and fees from ISO</description>
    <label>ISO Pricing Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>