force-app/main/default/objects/Application__c/fields/ISO_Response__c.field-meta.xml
<CustomField>
    <fullName>ISO_Response__c</fullName>
    <description>ISO response details</description>
    <label>ISO Response</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>