force-app/main/default/objects/Application__c/fields/ISO_Terms__c.field-meta.xml
<CustomField>
    <fullName>ISO_Terms__c</fullName>
    <description>Contract terms from ISO</description>
    <label>ISO Terms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>