force-app/main/default/objects/Application__c/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <description>Detailed acquisition source tied to marketing.</description>
    <inlineHelpText>Tracks granular lead source detail for reporting.</inlineHelpText>
    <label>Marketing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail_GVS</valueSetName>
    </valueSet>
</CustomField>