force-app/main/default/objects/Application__c/fields/Maximum_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Monthly_Volume__c</fullName>
    <inlineHelpText>Largest total $ amount of credit card processing volume expected per month.</inlineHelpText>
    <label>Maximum Monthly Credit Card Sales Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>