force-app/main/default/objects/Application__c/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <label>Merchant Category Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>