force-app/main/default/objects/Application__c/fields/Merchant_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Merchant accepted ISO offer</description>
    <label>Merchant Accepted</label>
    <type>Checkbox</type>
</CustomField>