force-app/main/default/objects/Application__c/fields/Merchant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Merchant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>