force-app/main/default/objects/Application__c/fields/Merchant_Lead__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Merchant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>