force-app/main/default/objects/Application__c/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <description>Projected monthly processing volume.</description>
    <inlineHelpText>Used by gate routing and ISO matching.</inlineHelpText>
    <label>Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>