force-app/main/default/objects/Application__c/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Preferred channel for outreach.</description>
    <inlineHelpText>Select the merchant’s preferred contact method.</inlineHelpText>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Contact_Method_GVS</valueSetName>
    </valueSet>
</CustomField>