force-app/main/default/objects/Application__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Preferred language for communications.</description>
    <inlineHelpText>Example: English, Spanish, French.</inlineHelpText>
    <label>Preferred Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>