force-app/main/default/objects/Application__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main contact for this application (used across RingCentral/Adobe flows).</description>
    <inlineHelpText>Pick the person we should contact for this application.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>