force-app/main/default/objects/Application__c/fields/Processing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Processing_Volume__c</fullName>
    <label>Processing Volume (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>