force-app/main/default/objects/Application__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to master application data</description>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>RelatedOpportunity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>