force-app/main/default/objects/Application__c/fields/Services_Interested__c.field-meta.xml
<CustomField>
    <fullName>Services_Interested__c</fullName>
    <label>Services Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>ACH/eCheck</fullName>
            </value>
            <value>
                <fullName>Mobile Payments</fullName>
            </value>
            <value>
                <fullName>Virtual Terminal</fullName>
            </value>
            <value>
                <fullName>Point of Sale System</fullName>
            </value>
            <value>
                <fullName>E-commerce Gateway</fullName>
            </value>
            <value>
                <fullName>Recurring Billing</fullName>
            </value>
            <value>
                <fullName>High Risk Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>