force-app/main/default/objects/Application__c/fields/Settlement_Country__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Country__c</fullName>
    <description>Country where settlements are deposited.</description>
    <inlineHelpText>If different from incorporation country, specify here.</inlineHelpText>
    <label>Settlement Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>