force-app/main/default/objects/Application__c/fields/Social_Security_Number2__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number2__c</fullName>
    <inlineHelpText>(9 Digits)xxx-xx-xxxx84.</inlineHelpText>
    <label>Owner 2 Social Security #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>