force-app/main/default/objects/Application__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <inlineHelpText>(9 Digits)xxx-xx-xxxx</inlineHelpText>
    <label>1st Owner Social Security Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>