force-app/main/default/objects/Application__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>