force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Pre-vet Approved</fullName>
            </value>
            <value>
                <fullName>Ready for ISO Submission</fullName>
            </value>
            <value>
                <fullName>Submitted to ISO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>