force-app/main/default/objects/Application__c/fields/Submission_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Submission_Error_Code__c</fullName>
    <description>If submission failed</description>
    <label>Submission Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>