force-app/main/default/objects/Application__c/fields/Submission_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Submission_Error_Message__c</fullName>
    <description>Error details</description>
    <label>Submission Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>