force-app/main/default/objects/Application__c/fields/Test_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_Login_URL__c</fullName>
    <description>URL for ISO/underwriter test login when required.</description>
    <inlineHelpText>Provide a sandbox/staging URL if needed for review.</inlineHelpText>
    <label>Test Login URL</label>
    <type>Url</type>
</CustomField>