force-app/main/default/objects/Application__c/fields/Urgency_Level__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Level__c</fullName>
    <label>Urgency Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Within 30 days</fullName>
            </value>
            <value>
                <fullName>Within 60 days</fullName>
            </value>
            <value>
                <fullName>No rush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>