force-app/main/default/objects/Application__c/fields/Vertical_Risk__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Risk__c</fullName>
    <label>Vertical Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>