force-app/main/default/objects/Application__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Primary public website for the business.</description>
    <inlineHelpText>Include https:// for best results.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>