force-app/main/default/objects/Application__c/fields/X1st_Owner_Officer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>X1st_Owner_Officer_Last_Name__c</fullName>
    <label>Owner 1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>