force-app/main/default/objects/Application__c/fields/X2nd_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Owner_Last_Name__c</fullName>
    <label>Owner 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>