force-app/main/default/objects/Application__c/fields/Years_In_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_In_Business__c</fullName>
    <description>How long the business has operated.</description>
    <inlineHelpText>Enter whole years; use 0 if less than 12 months.</inlineHelpText>
    <label>Years In Business</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>