force-app/main/default/objects/Application__c/validationRules/Application_Status_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Status_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Declined&quot;),
ISPICKVAL(Application_Status_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>You must select a Application Status Reason to proceed.</errorMessage>
</ValidationRule>