force-app/main/default/objects/Application__c/validationRules/Email_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Application__c.Email_Must_Be_Valid</fullName>
    <active>true</active>
    <description>Ensure email field is not empty and contains valid format</description>
    <errorConditionFormula>OR(ISBLANK(Email__c), NOT(REGEX(Email__c, "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$")))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address</errorMessage>
</ValidationRule>